<resources>
    <string name="app_name">Client_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wish">Hello wish fragment</string>
    <string name="calendar">Hello calendar fragment</string>
    <string name="mypage">Hello mypage fragment</string>

    <string name="home_tv_best_review">테이블링 Best 리뷰</string>
    <string name="home_tv_hot_place">핫한 맛집, 지금 바로 입장하세요!</string>
    <string name="rv_btn_fast_resevation">즉시예약</string>
    <string name="rv_btn_remote_waiting">원격줄서기</string>

    <!-- detail_activity tools:text -->
    <string name="tool_detail_img_indicator">1 / 8</string>
    <string name="tool_detail_wait_count">대기 3팀</string>
    <string name="tool_detail_shop_name">유니유니</string>
    <string name="tool_detail_shop_address">서울특별시 성북구 길음동 1276</string>
    <string name="tool_detail_shop_rating">5.0</string>
    <string name="tool_detail_shop_reviews">(7)</string>
    <string name="tool_detail_shop_introduction">유니유니는 다양한 스콘, 쿠키, 음료, 자체 제작 케이크로 보는 즐거움과 더불어 먹는 즐거음울 선사합니다</string>
    <string name="tool_detail_shop_distance">1km</string>
    <string name="tool_dialog_reserve_msg">Dialog 메시지</string>

    <!-- detail_activity android:text -->
    <string name="android_detail_btn_remote_wait">원격 줄서기</string>
    <string name="android_detail_btn_direct_reservation">즉시 예약</string>

    <!-- detail_activity dialog -->
    <string name="detail_dialog_msg_success_reserved">예약이 완료되었습니다.</string>
    <string name="detail_dialog_msg_success_canceled">예약이 취소되었습니다.</string>
    <string name="detail_dialog_msg_fail">서버 통신 오류가 발생하였습니다.</string>
    <string name="detail_dialog_btn_ok">확인</string>

    <!-- menu_button_shop -->
    <string name="android_menu_button_shop_map">위치</string>
    <string name="android_menu_button_shop_call">전화</string>
    <string name="android_menu_button_shop_share">공유</string>
    <string name="tool_menu_button_shop_wish">18</string>
    
    <!-- home -->
    <string name="home_address">마포구 연남동 123</string>
    <string name="home_search_box_hint">지역/음식종류/레스토랑 검색</string>

</resources>