<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_reservation_button"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_indicator_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/rectangle_fill_radius_30dp"
                android:backgroundTint="@color/black_alpha_35"
                android:fontFamily="@font/noto_sans"
                android:includeFontPadding="false"

                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"

                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/vp_img"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/tool_detail_img_indicator" />

            <TextView
                android:id="@+id/tv_wait_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/rectangle_fill_radius_17dp"
                android:backgroundTint="@color/red_main"
                android:fontFamily="@font/noto_sans"
                android:includeFontPadding="false"

                android:paddingHorizontal="11dp"
                android:paddingVertical="4dp"

                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/vp_img"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/tool_detail_wait_count" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_img"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager2.widget.ViewPager2>


            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp_img"

                tools:text="@string/tool_detail_shop_name"
                android:fontFamily="@font/noto_sans"
                android:textFontWeight="700"
                android:textSize="22sp"
                android:includeFontPadding="false"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_shop_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/noto_sans"
                android:includeFontPadding="false"

                android:textColor="@color/gray"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tv_shop_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_name"
                tools:text="@string/tool_detail_shop_address" />

            <com.example.client_android.ui.ViewRatingBar
                android:id="@+id/ll_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/tv_shop_address"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_address" />

            <TextView
                android:id="@+id/tv_shop_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/ll_rating_bar"
                app:layout_constraintStart_toEndOf="@+id/ll_rating_bar"
                app:layout_constraintTop_toTopOf="@+id/ll_rating_bar"

                tools:text="@string/tool_detail_shop_rating"
                android:fontFamily="@font/noto_sans"
                android:textFontWeight="500"
                android:textSize="14sp"
                android:textColor="@color/red_main"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/tv_shop_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toEndOf="@+id/tv_shop_rating"
                app:layout_constraintBottom_toBottomOf="@+id/ll_rating_bar"
                app:layout_constraintTop_toTopOf="@+id/ll_rating_bar"

                tools:text="@string/tool_detail_shop_reviews"
                android:fontFamily="@font/noto_sans"
                android:textFontWeight="500"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/tv_shop_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/noto_sans"

                android:includeFontPadding="false"
                android:textColor="@color/gray"
                android:textFontWeight="500"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_shop_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_shop_name"
                tools:text="@string/tool_detail_shop_distance" />

            <ImageView
                android:id="@+id/iv_ic_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:src="@drawable/ic_map"
                app:layout_constraintBottom_toBottomOf="@+id/tv_shop_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_shop_distance"
                app:layout_constraintTop_toTopOf="@+id/tv_shop_name" />

            <TextView
                android:id="@+id/tv_shop_introduction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_rating_bar"
                app:layout_constraintStart_toStartOf="@+id/ll_rating_bar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="42dp"

                tools:text="@string/tool_detail_shop_introduction"
                android:fontFamily="@font/noto_sans"
                android:textFontWeight="400"
                android:textSize="13sp"
                android:textColor="@color/gray"
                android:includeFontPadding="false"
                />

            <com.example.client_android.ui.detail.MenuButtonShop
                android:id="@+id/ll_menu_button_shop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_introduction"
                android:layout_marginTop="34dp"
                android:layout_marginHorizontal="40dp"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_shop_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/ll_menu_button_shop"
                app:layout_constraintStart_toStartOf="@+id/ll_menu_button_shop"
                app:layout_constraintTop_toBottomOf="@+id/ll_menu_button_shop"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/tab_text"
                app:tabTextColor="@color/gray_2"
                app:tabIndicatorHeight="2dp"
                app:tabIndicatorColor="@color/red_main"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tl_shop_detail"
                android:background="@color/line"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_shop_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tl_shop_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_reservation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_gray_top"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.widget.Button
            android:id="@+id/btn_waiting"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/rectangle_border_red_radius_5dp"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:text="@string/android_detail_btn_remote_wait"
            android:textColor="@color/black"

            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_direct_reservation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btn_direct_reservation"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_border_red_radius_5dp"
            android:backgroundTint="@color/red_main"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:text="@string/android_detail_btn_direct_reservation"
            android:textColor="@color/white"

            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_waiting"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>