<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_btn_shop_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_btn_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="28dp"
            android:src="@drawable/ic_btn_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"

            android:text="@string/android_menu_button_shop_map"
            android:textColor="@color/gray_3"
            android:textFontWeight="400"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_btn_map"
            app:layout_constraintStart_toStartOf="@+id/iv_btn_map"
            app:layout_constraintTop_toBottomOf="@+id/iv_btn_map" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:background="#F3F5F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_btn_shop_call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_btn_shop_map"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:src="@drawable/ic_btn_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:text="@string/android_menu_button_shop_call"

            android:textColor="@color/gray_3"
            android:textFontWeight="400"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_btn_call"
            app:layout_constraintStart_toStartOf="@+id/iv_btn_call"
            app:layout_constraintTop_toBottomOf="@+id/iv_btn_call" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:background="#F3F5F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_btn_shop_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_btn_shop_call"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:src="@drawable/ic_btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:text="@string/android_menu_button_shop_share"

            android:textColor="@color/gray_3"
            android:textFontWeight="400"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_btn_share"
            app:layout_constraintStart_toStartOf="@+id/iv_btn_share"
            app:layout_constraintTop_toBottomOf="@+id/iv_btn_share" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:background="#F3F5F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_btn_shop_wish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_btn_shop_share"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_btn_wish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_btn_wish_empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shop_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColor="@color/gray_3"

            android:textFontWeight="400"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_btn_wish"
            app:layout_constraintStart_toStartOf="@+id/iv_btn_wish"
            app:layout_constraintTop_toBottomOf="@+id/iv_btn_wish"
            tools:text="@string/tool_menu_button_shop_wish" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>